url_path_metrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdeploy
  labels:
    app: golang
spec:
  selector:
    matchLabels:
      app: golang
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
      - name: appdeploy
        image: sirishagopigiri/golangapp:custommetrics
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: appservice
  labels:
    app: golang
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: golang
